// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App component renders the component when no user and no loading 1`] = `
<div>
  <ul>
    <li>
      <a
        href="/"
      >
        navigation.home
      </a>
    </li>
    <li>
      <a
        href="/login"
      >
        navigation.login
      </a>
    </li>
  </ul>
  <hr />
  <div>
    <h2>
      landing.title
    </h2>
    <p>
      landing.introduction.p1
    </p>
    <ul>
      <li>
        landing.introduction.features1
      </li>
      <li>
        landing.introduction.features2
      </li>
      <li>
        landing.introduction.features3
      </li>
      <li>
        landing.introduction.features4
      </li>
      <li>
        landing.introduction.features5
      </li>
      <li>
        landing.introduction.features6
      </li>
      <li>
        landing.introduction.features7
      </li>
    </ul>
  </div>
</div>
`;

exports[`App component renders the component when user loaded 1`] = `
<div>
  <ul>
    <li>
      <a
        href="/"
      >
        navigation.home
      </a>
    </li>
    <li>
      <button
        data-testid="logout"
      >
        navigation.logout
      </button>
    </li>
  </ul>
  <hr />
  <div>
    EditSettings
  </div>
</div>
`;

exports[`App component renders the component when user loading 1`] = `
<div>
  <ul>
    <li>
      <a
        href="/"
      >
        navigation.home
      </a>
    </li>
    <li>
      <a
        href="/login"
      >
        navigation.login
      </a>
    </li>
  </ul>
  <hr />
</div>
`;
